# stock_backend

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  compose.yaml  dockerfile.celery  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  test_setup.sh
db/: env.py
docker/celery/: prestart.sh
docker/www/: prestart.sh
docs/dev/: README.md  api.md  cli.md  database.md  docker.md  settings.md
stock_backend/: celery.py
stock_backend/conf/: settings.py
tests/: conftest.py
